--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "flowbite": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.7.1",
-    "react-multi-carousel": "^2.8.2",
-    "react-router-dom": "^6.6.1"
+    "react-router-dom": "^6.6.1",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^8.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
