--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^1.2.5",
     "flowbite": "^1.6.0",
     "nice-react-ticker": "^2.1.0",
+    "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.1",
+    "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.4.5"
   },
