--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@material-tailwind/react": "^1.2.5",
     "flowbite": "^1.6.0",
     "nice-react-ticker": "^2.1.0",
+    "path-browserify": "^1.0.1",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.43.0",
     "react-icons": "^4.7.1",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.6.1",
